--- a/.trvis.yml
+++ b/.trvis.yml
@@ -4,5 +4,6 @@ services:
 
 before_install:
  - docker build -t seif-10/docker-react -f Dockerfile.dev
-
+ 
+script:
 script run seif-10/docker-react npm run test -- --coverage
