--- a/.trvis.yml
+++ b/.trvis.yml
@@ -4,6 +4,6 @@ services:
 
 before_install:
  - docker build -t seif-10/docker-react -f Dockerfile.dev
- 
+
 script:
-script run seif-10/docker-react npm run test -- --coverage
+ - docker run seif-10/docker-react npm run test -- --coverage
