--- a/.trvis.yml
+++ b/.trvis.yml
@@ -6,4 +6,4 @@ before_install:
  - docker build -t seif-10/docker-react -f Dockerfile.dev
 
 script:
- - docker run seif-10/docker-react npm run test -- --watchAll=false
+ - docker run -e CI=true seif-10/docker-react npm run test
